--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>花郁荃</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <p class="fle">大家好，我是花郁荃，這是我的個人網頁</p>
+      <a class="fle" href="https://github.com/kkk0903/Resume"
+        ><img src="img.jpg" alt="A picture"
+      /></a>
+    </div>
+  </body>
+</html>
