add weatherTool link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a class="fle" href="https://github.com/kkk0903/Resume"
         ><img src="img.jpg" alt="A picture"
       /></a>
+      <a href="https://kkk0903.github.io/GetWeatherByCountry">天氣小工具</a>
     </div>
   </body>
 </html>
